--- a/package.json
+++ b/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "raddotech",
   "private": true,
@@ -8,12 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "start": "react-scripts start"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
